--- a/css/style.css
+++ b/css/style.css
@@ -25,17 +25,17 @@
   transition-timing-function: cubic-bezier(0.4, 0, 0.4, 1);
 }
 
-svg {
+.svg {
   vertical-align: middle;
 }
 
-body {
+.body {
   background: #ffffff;
   font-family: "Roboto", sans-serif;
   color: #212121;
 }
 
-.container h1 {
+.h1 {
   margin-left: 252px;
   width: 696px;
   font-weight: 900;
@@ -759,7 +759,7 @@ body {
   pointer-events: none;
 }
 
-.is-hidden__container {
+.is-hidden .is-hidden--active {
   transform: scale(0);
 }
 
@@ -792,6 +792,7 @@ body {
 }
 
 .modal__label {
+  display: flex;
   flex-direction: column;
   font-weight: 400;
   font-size: 12px;
@@ -800,10 +801,19 @@ body {
   letter-spacing: 0.01em;
   color: #757575;
 }
-.modal__data {
-  display: flex;
+
+.modal__label--comment {
   margin-left: 40px;
+  margin-right: 40px;
 }
+
+.modal__section {
+  display: flex;
+  flex-direction: column;
+  margin-left: 40px;
+  margin-right: 40px;
+}
+
 .modal__input {
   margin-right: 40px;
   margin-top: 4px;
@@ -813,12 +823,7 @@ body {
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   outline: 0;
-}
-
-.modal__comment {
-  display: flex;
-  margin-left: 40px;
-  margin-right: 40px;
+  width: 100%;
 }
 
 .modal__textarea {
@@ -851,7 +856,7 @@ body {
   letter-spacing: 0.03em;
 }
 
-.modal__link {
+.modal__checkbox-link {
   color: var(--active-color);
   text-decoration: underline;
   margin-left: 4px;
@@ -875,14 +880,16 @@ body {
   left: -2px;
 }
 
-.modal__input--checked {
+.modal__checkbox-in--checked {
   position: absolute;
   left: 62px;
   display: none;
   outline: 0;
 }
 
-.modal__input--checked:checked + .modal__checkbox-svg {
+.modal__checkbox-in--checked:checked
+  + .modal__checkbox-icon
+  .modal__checkbox-svg {
   opacity: 1;
 }
 
@@ -911,13 +918,7 @@ body {
   margin-bottom: 40px;
 }
 
-.modal__data {
-  display: flex;
-  flex-direction: column;
-  margin-right: 40px;
-}
-
-.modal__svg--trans {
+.modal__icon--trans {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -928,27 +929,27 @@ body {
   outline: 0;
 }
 
-.modal__icon-input:focus + .modal__svg {
+.modal__input:focus + .modal__icon {
   fill: var(--active-color);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal__icon-input:focus {
+.modal__input:focus {
   border-color: var(--active-color);
 }
 
-.modal__icon {
+.modal__container {
   position: relative;
   margin-bottom: 10px;
 }
 
-.modal__svg {
+.modal__icon {
   position: absolute;
   top: 20px;
   left: 15px;
 }
 
-.modal__container {
+.modal__name {
   display: flex;
   height: 14px;
 }
