--- a/sass/main.css
+++ b/sass/main.css
@@ -1,6 +1,11 @@
 .background-section {
   background-color: var(--background-dark-grey);
-  background-image: linear-gradient(to bottom, var(--background-image), var(--background-image)), url(../images/background.jpg);
+  background-image: linear-gradient(
+      to bottom,
+      var(--background-image),
+      var(--background-image)
+    ),
+    url(../images/background.jpg);
   background-repeat: no-repeat;
   background-position: center;
   padding-top: 200px;
@@ -45,4 +50,4 @@
   justify-content: center;
   align-items: center;
   transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}/*# sourceMappingURL=main.css.map */
+} /*# sourceMappingURL=main.css.map */
