--- a/sass/components/_paragraphs-section.scss
+++ b/sass/components/_paragraphs-section.scss
@@ -27,4 +27,12 @@
     letter-spacing: 0.03em;
     color: var(--text-color);
   }
+
+  &__icons {
+    padding: 25px 102.34px;
+    margin-bottom: 30px;
+    width: 270px;
+    background: var(--background-grey);
+    border-radius: 4px;
+  }
 }
