--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -137,4 +137,9 @@
   &__newsletter-input::placeholder {
     color: rgba(255, 255, 255, 0.6);
   }
+
+  &__newsletter-icon {
+    fill: var(--background-white);
+    margin-left: 24px;
+  }
 }
