--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -22,6 +22,14 @@
   }
 
   &__contacts-link {
+    text-decoration: none;
+    color: var(--text-color);
     fill: currentColor;
+  }
+
+  &__contacts-icon {
+    fill: #757575;
+    margin-right: 10px;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
