--- a/sass/components/_modal-backdrop.scss
+++ b/sass/components/_modal-backdrop.scss
@@ -168,6 +168,23 @@
     display: flex;
     height: 14px;
   }
+
+  &__icon--trans {
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
+
+  &__icon-input {
+    width: 448px;
+    padding-left: 42px;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    outline: 0;
+  }
+
+  &__icon {
+    position: absolute;
+    top: 20px;
+    left: 15px;
+  }
 }
 
 .backdrop {
