--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,13 +1,14 @@
-@import "utils/variables.scss";
-@import "utils/pseudo-classes";
-@import "components/footer";
-@import "components/header";
-@import "components/nav-header";
-@import "components/logo";
-@import "components/bg-section";
-@import "components/clients-section";
-@import "components/employees-section";
-@import "components/job-section";
-@import "components/modal-backdrop";
-@import "components/paragraphs-section";
-@import "components/portfolio-section";
+@import "./components/globals";
+@import "./utils/variables";
+@import "./utils/pseudo-classes";
+@import "./components/footer";
+@import "./components/header";
+@import "./components/nav-header";
+@import "./components/logo";
+@import "./components/bg-section";
+@import "./components/clients-section";
+@import "./components/employees-section";
+@import "./components/job-section";
+@import "./components/modal-backdrop";
+@import "./components/paragraphs-section";
+@import "./components/portfolio-section";
