--- a/sass/components/_job-section.scss
+++ b/sass/components/_job-section.scss
@@ -29,7 +29,7 @@
     left: 0;
     width: 370px;
     height: 70px;
-    background-color: rgba(47, 48, 58, 0.8);
+    background-color: var(--background-image);
     color: var(--background-white);
 
     justify-content: center;
