--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -1,5 +1,5 @@
 .logo {
-  font-family: "Raleway";
+  font-family: var(--second-main-font-family);
   text-decoration: none;
   font-weight: 700;
   font-size: 26px;
