--- a/sass/components/_portfolio-section.scss
+++ b/sass/components/_portfolio-section.scss
@@ -71,7 +71,7 @@
 
   &__projects-text {
     color: var(--background-white);
-    font-family: "Roboto";
+    font-family: var(--main-font-family);
     font-style: normal;
     font-weight: 400;
     font-size: 18px;
