--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -132,6 +132,7 @@
     padding-bottom: 15px;
     margin-top: 20px;
     outline: 0;
+    color: var(--contacts-footer);
   }
 
   &__newsletter-input::placeholder {
