--- a/sass/components/_logo.scss
+++ b/sass/components/_logo.scss
@@ -10,11 +10,11 @@
   margin-top: 24px;
   margin-bottom: 25px;
 
-  .logo--footer {
+  .logo__footer {
     color: var(--background-white);
   }
 
-  .logo--header {
+  .logo__header {
     color: var(--title-color);
   }
 }
