--- a/sass/components/_employees-section.scss
+++ b/sass/components/_employees-section.scss
@@ -33,7 +33,7 @@
     padding-bottom: 16px;
   }
 
-  &__overlay--position {
+  &__text-position {
     display: flex;
     flex-direction: column;
   }
