--- a/sass/components/_nav-header.scss
+++ b/sass/components/_nav-header.scss
@@ -13,11 +13,15 @@
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.02em;
-    color: var(--title-color);
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-decoration: none;
     color: var(--text-color);
   }
+
+  .navigation-list__link--active {
+    color: #2196f3;
+  }
+
   &-list__element {
     position: relative;
   }
