--- a/sass/components/_portfolio-section.scss
+++ b/sass/components/_portfolio-section.scss
@@ -12,6 +12,7 @@
 
   &__nav-button {
     padding: 6px 22px;
+    font-family: var(--main-font-family);
     cursor: pointer;
     font-weight: 500;
     font-size: 16px;
@@ -25,7 +26,7 @@
       box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
-  &__nav--position:not(:last-child) {
+  &__nav-btn-position:not(:last-child) {
     margin-right: 8px;
   }
 
@@ -82,13 +83,20 @@
   }
 
   &__projects-title {
+    font-family: var(--main-font-family);
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
     letter-spacing: 0.06em;
     color: var(--title-color);
   }
+
+  &__projects-title--position {
+    display: block;
+  }
+
   &__projects-category {
+    font-family: var(--main-font-family);
     font-weight: 400;
     font-size: 16px;
     line-height: 1.88;
@@ -102,8 +110,5 @@
     border-bottom: 1px solid #eeeeee;
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
-  }
-  &__projects-descr--position {
-    display: block;
   }
 }
