--- a/sass/components/_employees-section.scss
+++ b/sass/components/_employees-section.scss
@@ -74,4 +74,13 @@
     align-items: center;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+  &__icons-element:hover,
+  &__icons-element:focus {
+    background-color: var(--active-color);
+  }
+  &__icons-element:hover &__icons-svg,
+  &__icons-element:focus &__icons-svg {
+    fill: var(--background-white);
+  }
 }
