--- a/sass/components/_header.scss
+++ b/sass/components/_header.scss
@@ -32,4 +32,25 @@
     margin-right: 10px;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   }
+
+  &__contacts-link:hover,
+  &__contacts-link:focus {
+    color: var(--active-color);
+  }
+
+  &__contacts-link:hover > &__contacts-icon,
+  &__contacts-link:focus > &__contacts-icon {
+    fill: var(--active-color);
+  }
+}
+
+.page-active::after {
+  content: "";
+  position: absolute;
+  height: 4px;
+  width: 100%;
+  background-color: var(--active-color);
+  left: 0;
+  bottom: -1px;
+  border-radius: 2px;
 }
