--- a/sass/components/_modal-backdrop.scss
+++ b/sass/components/_modal-backdrop.scss
@@ -29,7 +29,7 @@
   pointer-events: none;
 }
 
-.is-hidden .is-hidden--active {
+.is-hidden .modal--active {
   transform: scale(0);
 }
 
@@ -149,7 +149,7 @@
     left: -2px;
   }
 
-  &__checkbox-in--checked {
+  &__checkbox-input {
     position: absolute;
     left: 62px;
     display: none;
