--- a/sass/components/_nav-header.scss
+++ b/sass/components/_nav-header.scss
@@ -15,11 +15,11 @@
     letter-spacing: 0.02em;
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     text-decoration: none;
-    color: var(--text-color);
+    color: var(--title-color);
   }
 
-  .navigation-list__link--active {
-    color: #2196f3;
+  &-list__link--active {
+    color: var(--active-color);
   }
 
   &-list__element {
@@ -40,5 +40,10 @@
     left: 0;
     bottom: -1px;
     border-radius: 2px;
+  }
+
+  &-list__link:hover,
+  &-list__link:focus {
+    color: var(--active-color);
   }
 }
