--- a/sass/components/_portfolio-section.scss
+++ b/sass/components/_portfolio-section.scss
@@ -111,4 +111,23 @@
     border-left: 1px solid #eeeeee;
     border-right: 1px solid #eeeeee;
   }
+
+  &__nav-button:hover,
+  &__nav-button:focus {
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+  &__nav-button:hover,
+  &__nav-button:focus {
+    color: var(--background-white);
+    background: var(--active-color);
+  }
+  &__projects-element:hover &__projects-transform {
+    transform: translateY(-294px);
+  }
+  &__projects-element:hover,
+  &__projects-element:focus {
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+      1px 4px 6px rgba(0, 0, 0, 0.16);
+  }
 }
